--- a/ReadMe
+++ b/ReadMe
@@ -1,5 +1,6 @@
 This site presents my personal portfolio and contact info. 
-main Thecnoligies used:
-Node JS
-SQL
+Main technologies used:
+React
 TS
+SQL
+
